--- a/site/static/css/index.css
+++ b/site/static/css/index.css
@@ -90,12 +90,7 @@ body {
 }
 
 .block>.item, .option {
-	-webkit-touch-callout: none; /* iOS Safari */
-	  -webkit-user-select: none; /* Safari */
-	   -khtml-user-select: none; /* Konqueror HTML */
-		 -moz-user-select: none; /* Firefox */
-		  -ms-user-select: none; /* Internet Explorer/Edge */
-			  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+	user-select: none;
 }
 
 .block>.item:hover {
@@ -148,8 +143,6 @@ input[type=checkbox] {
 */
 .checkable:not(:checked) + div::after {
 	height:20px;
-	width:20px;
-	text-align: center;
 	float:right;
 	content:'\2212';
 	color:red;
@@ -157,8 +150,6 @@ input[type=checkbox] {
 
 .checkable:checked + div::after {
 	height:20px;
-	width:20px;
-	text-align: center;
 	float:right;
 	content:'\002B';
 	color:green;
