--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -22,13 +22,12 @@
 
 			<div class="sub-container side-container">
 
-				<form action="/article" method="post" class="block" autocomplete="off">
+				<form action="/article" method="post" class="block annotation-block" autocomplete="off">
 					<div class="header">Annotate</div>
 					<input type="hidden" name="id" value="{{ article.id }}">
 					<input class="annotation-input" type="text" name="annotation">
 					<input type="submit" class="item button" name="add" value="Add">
 					<input type="submit" class="item button" name="remove" value="Remove">
-
 				</form>
 
 				<div class="block whiteout">
