forgot to remove test exceptions :P

--- a/site/templates/errors/500.html
+++ b/site/templates/errors/500.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- End Meta Declarations -->
 
-		<title>404 Not Found</title>
+		<title>500 Internal Server Error</title>
 
 		<!-- External Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="/static/css/errors.css" />
