--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -47,7 +47,7 @@
 						<div class="label-name">Washington Post</div>
 					</label>
 				</div>
-				
+
 				<div class="block">
 					<div class="header">Categories</div>
 					<select name="category" class="categories">
@@ -97,14 +97,17 @@
 					<a class="title" href="/article?id={{ article.id }}">{{ article.title }}</a>
 					<div class="information">
 						<div class="link"><span class="title-card-label">original: </span><a href="{{ article.link }}" target="_blank">link</a></div>
-						<div class="author"><span class="title-card-label">author: </span>{{ article.author }}</div>
+						<div class="author"><span class="title-card-label">author(s): </span>{{ article.author }}</div>
 						<div class="source"><span class="title-card-label">source: </span>{{ article.source }}</div>
-						<div class="date"><span class="title-card-label">fetched: </span>{{ article.fetched.strftime('%Y-%m-%d %H:%M:%S %p') }} UTC</div>
+						<div class="date">
+							<span class="title-card-label">fetched: </span>
+							<span class="js-localize-date" iso="{{ article.fetched.isoformat() }}">{{ article.fetched.strftime('%Y-%m-%d %H:%M:%S %p') }} UTC</span>
+						</div>
 					</div>
 				</div>
 				{% endfor %}
 				<div class="footer">
-					newsbin &copy; <span id="js-footer-year">2017</span> Michael House
+					newsbin &copy; {{ date.year }} Michael House
 				</div>
 			</div>
 
