--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -142,7 +142,7 @@
 					</p>
 				</div>
 				<div class="footer">
-					newsbin &copy; <span id="js-footer-year">2017</span> Michael House
+					newsbin &copy; {{ date.year }} Michael House
 				</div>
 			</div>
 		</div>
